Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63118

Redefinition error in qtdeclarative

XMLWordPrintable

    • bb01612a8809efd268903e41b9e3a17cff48f1c0

      Trying to build 5.6.3 Release Candidate content in yocto 1.8 fails in qtdeclarative compilation with:

       /home/migronof/git_repos/dev/yocto/fido/build-nitrogen6x/tmp/work/x86_64-linux/qtdeclarative-native/5.6.3+gitAUTOINC+cf3b1bbd9e-r0/git/src/qml/qml/qqmltypeloader.cpp:903:6: error: redefinition of 'void QQmlTypeLoader::enableProfiler()'
      |  void QQmlTypeLoader::enableProfiler()
      |       ^
      | In file included from /home/migronof/git_repos/dev/yocto/fido/build-nitrogen6x/tmp/work/x86_64-linux/qtdeclarative-native/5.6.3+gitAUTOINC+cf3b1bbd9e-r0/git/src/qml/qml/qqmltypeloader.cpp:34:0:
      | /home/migronof/git_repos/dev/yocto/fido/build-nitrogen6x/tmp/work/x86_64-linux/qtdeclarative-native/5.6.3+gitAUTOINC+cf3b1bbd9e-r0/git/src/qml/qml/qqmltypeloader_p.h:317:10: note: 'void QQmlTypeLoader::enableProfiler()' previously defined here
      |      void enableProfiler() {}
      |           ^
      | Makefile:13610: recipe for target '.obj/qqmltypeloader.o' failed
      | make[2]: *** [.obj/qqmltypeloader.o] Error 1
      

       
      Looks like this could be caused by the last qtdeclarative commit added to 5.6.3:

      cf3b1bbd9ee048a28b58a55d76504b1c01e34811

        For Gerrit Dashboard: QTBUG-63118
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes