QQmlTypeLoader: Guard enableProfiler() against QT_NO_QML_DEBUGGER

If debugging is disabled, enableProfiler() is an inline empty function.

Task-number: QTBUG-63118
Change-Id: I28fa7b7d3390482e7b0cc6419c5a1f47a5b9916f
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>